fix: Reference the same subject
If add the same Subject object to students and update its core, the score of all students that have that subject will be change the same

Solution: use Deep copy or create new object with the same attributes